# lumut

./: LICENSE  README.md  pyproject.toml
examples/: ml_usage.py
lumut/: __init__.py  base.py
lumut/metrics/: __init__.py
lumut/models/: linear.py
lumut/preprocessing/: __init__.py  scalers.py
tests/: test_core.py  test_utlis.py
