[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumut"
version = "0.1.0"
authors = [{ name="Zul", email="zul12.project@gmail.com" }]
description = "Lumut is a lightweight, modular machine learning toolkit designed to quietly stick into any Python project."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
keywords = [
    "machine-learning",
    "ml",
    "scikit-learn",
    "toolkit",
    "linear-regression",
    "logistic-regression",
    "preprocessing",
    "python-library"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]
examples = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Zul-paduka-raja-keren/lumut/"
Repository = "https://github.com/Zul-paduka-raja-keren/lumut/"
Issues = "https://github.com/Zul-paduka-raja-keren/lumut/issues"
Documentation = "https://github.com/Zul-paduka-raja-keren/lumut/blob/main/README.md"

[tool.setuptools]
packages = ["lumut", "lumut.models", "lumut.preprocessing", "lumut.metrics", "lumut.utils"]

[tool.setuptools.package-data]
lumut = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=lumut --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false